// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabGroup /> Centered story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center tabs__list--variant-default"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="true"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r5:-Tab-Title-1"
      id=":r4:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="heading heading--headline-sm mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> Default story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--variant-default"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="true"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r1:-Tab-Title-1"
      id=":r0:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="heading heading--headline-sm mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> InverseVariant story renders snapshot 1`] = `
<div
  class="p-spacing-size-half"
>
  <div
    class="tabs"
  >
    <div
      class="tabs__header"
    >
      <ul
        class="tabs__list tabs--has-divider tabs__list--variant-inverse"
        role="tablist"
      >
        <li
          class="tabs__item eds-is-active"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="true"
            class="tabs__link"
            href="#:r2:"
            id=":r3:-Tab-Title-1"
            role="tab"
            tabindex="0"
          >
            Tab Title 1
            <div
              aria-hidden="true"
              class="tab__highlight"
            />
          </a>
        </li>
        <li
          class="tabs__item"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="tabs__link"
            href="#:r2:"
            id=":r3:-Tab-Title-2"
            role="tab"
            tabindex="-1"
          >
            Tab Title 2
            <div
              aria-hidden="true"
              class="tab__highlight"
            />
          </a>
        </li>
        <li
          class="tabs__item"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="tabs__link"
            href="#:r2:"
            id=":r3:-Tab-Title-3"
            role="tab"
            tabindex="-1"
          >
            Tab Title 3
            <div
              aria-hidden="true"
              class="tab__highlight"
            />
          </a>
        </li>
        <li
          class="tabs__item"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="tabs__link"
            href="#:r2:"
            id=":r3:-Tab-Title-4"
            role="tab"
            tabindex="-1"
          >
            Tab Title 4
            <div
              aria-hidden="true"
              class="tab__highlight"
            />
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        aria-hidden="false"
        aria-labelledby=":r3:-Tab-Title-1"
        id=":r2:"
        role="tabpanel"
      >
        <div
          class="max-w-[576px] text-utility-inverse"
        >
          <h3
            class="heading heading--headline-sm mb-spacing-size-3"
          >
            Tab 1
          </h3>
          <p
            class="text text--body-md"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> TabWidthFull story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center tabs__list--variant-default"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="true"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r7:-Tab-Title-1"
      id=":r6:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="heading heading--headline-sm mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> WithTabIcons story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center tabs__list--variant-default"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="true"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.19625 17.4845C7.04625 16.873 7.94817 16.3894 8.902 16.0337C9.85583 15.6779 10.8885 15.5 12 15.5C13.1115 15.5 14.1442 15.6779 15.098 16.0337C16.0518 16.3894 16.9538 16.873 17.8038 17.4845C18.4641 16.8012 18.9952 15.9942 19.397 15.0635C19.799 14.1327 20 13.1115 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.1115 4.201 14.1327 4.603 15.0635C5.00483 15.9942 5.53592 16.8012 6.19625 17.4845ZM12.0005 12.5C11.1578 12.5 10.4471 12.2108 9.86825 11.6323C9.28942 11.0538 9 10.3432 9 9.5005C9 8.65783 9.28925 7.94708 9.86775 7.36825C10.4462 6.78942 11.1568 6.5 11.9995 6.5C12.8422 6.5 13.5529 6.78925 14.1318 7.36775C14.7106 7.94625 15 8.65683 15 9.4995C15 10.3422 14.7107 11.0529 14.1322 11.6317C13.5537 12.2106 12.8432 12.5 12.0005 12.5ZM12 21C10.7448 21 9.56983 20.7663 8.475 20.299C7.38017 19.8317 6.42758 19.1929 5.61725 18.3828C4.80708 17.5724 4.16833 16.6198 3.701 15.525C3.23367 14.4302 3 13.2552 3 12C3 10.7448 3.23367 9.56983 3.701 8.475C4.16833 7.38017 4.80708 6.42758 5.61725 5.61725C6.42758 4.80708 7.38017 4.16833 8.475 3.701C9.56983 3.23367 10.7448 3 12 3C13.2552 3 14.4302 3.23367 15.525 3.701C16.6198 4.16833 17.5724 4.80708 18.3828 5.61725C19.1929 6.42758 19.8317 7.38017 20.299 8.475C20.7663 9.56983 21 10.7448 21 12C21 13.2552 20.7663 14.4302 20.299 15.525C19.8317 16.6198 19.1929 17.5724 18.3828 18.3828C17.5724 19.1929 16.6198 19.8317 15.525 20.299C14.4302 20.7663 13.2552 21 12 21ZM12 20C12.9218 20 13.8289 19.8388 14.7212 19.5163C15.6134 19.1939 16.3845 18.7526 17.0345 18.1923C16.3845 17.6704 15.6326 17.2579 14.7788 16.9548C13.9249 16.6516 12.9987 16.5 12 16.5C11.0013 16.5 10.0718 16.6484 9.2115 16.9453C8.35133 17.2421 7.60267 17.6578 6.9655 18.1923C7.6155 18.7526 8.38658 19.1939 9.27875 19.5163C10.1711 19.8388 11.0782 20 12 20ZM12 11.5C12.5615 11.5 13.0352 11.3071 13.4212 10.9212C13.8071 10.5352 14 10.0615 14 9.5C14 8.9385 13.8071 8.46475 13.4212 8.07875C13.0352 7.69292 12.5615 7.5 12 7.5C11.4385 7.5 10.9647 7.69292 10.5787 8.07875C10.1929 8.46475 10 8.9385 10 9.5C10 10.0615 10.1929 10.5352 10.5787 10.9212C10.9647 11.3071 11.4385 11.5 12 11.5Z"
            />
          </svg>
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2H9c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm6.18-6.99L18.1 2.45c-.42-.35-1.05-.3-1.41.13-.35.42-.29 1.05.13 1.41l3.07 2.56c.42.35 1.05.3 1.41-.13.36-.42.3-1.05-.12-1.41zM4.1 6.55l3.07-2.56c.43-.36.49-.99.13-1.41-.35-.43-.98-.48-1.4-.13L2.82 5.01c-.42.36-.48.99-.12 1.41.35.43.98.48 1.4.13zM12 4c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9zm0 16c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7z"
            />
          </svg>
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.9999 12.6004V9.00039C12.9999 8.71706 12.9041 8.47956 12.7124 8.28789C12.5207 8.09622 12.2832 8.00039 11.9999 8.00039C11.7166 8.00039 11.4791 8.09622 11.2874 8.28789C11.0957 8.47956 10.9999 8.71706 10.9999 9.00039V12.9754C10.9999 13.1087 11.0249 13.2379 11.0749 13.3629C11.1249 13.4879 11.1999 13.6004 11.2999 13.7004L14.0999 16.5004C14.2832 16.6837 14.5166 16.7754 14.7999 16.7754C15.0832 16.7754 15.3166 16.6837 15.4999 16.5004C15.6832 16.3171 15.7749 16.0837 15.7749 15.8004C15.7749 15.5171 15.6832 15.2837 15.4999 15.1004L12.9999 12.6004ZM11.9999 22.0004C10.7499 22.0004 9.57907 21.7629 8.4874 21.2879C7.39574 20.8129 6.44574 20.1712 5.6374 19.3629C4.82907 18.5546 4.1874 17.6046 3.7124 16.5129C3.2374 15.4212 2.9999 14.2504 2.9999 13.0004C2.9999 11.7504 3.2374 10.5796 3.7124 9.48789C4.1874 8.39622 4.82907 7.44622 5.6374 6.63789C6.44574 5.82956 7.39574 5.18789 8.4874 4.71289C9.57907 4.23789 10.7499 4.00039 11.9999 4.00039C13.2499 4.00039 14.4207 4.23789 15.5124 4.71289C16.6041 5.18789 17.5541 5.82956 18.3624 6.63789C19.1707 7.44622 19.8124 8.39622 20.2874 9.48789C20.7624 10.5796 20.9999 11.7504 20.9999 13.0004C20.9999 14.2504 20.7624 15.4212 20.2874 16.5129C19.8124 17.6046 19.1707 18.5546 18.3624 19.3629C17.5541 20.1712 16.6041 20.8129 15.5124 21.2879C14.4207 21.7629 13.2499 22.0004 11.9999 22.0004ZM2.0499 7.30039C1.86657 7.11706 1.7749 6.88372 1.7749 6.60039C1.7749 6.31706 1.86657 6.08372 2.0499 5.90039L4.8999 3.05039C5.08324 2.86706 5.31657 2.77539 5.5999 2.77539C5.88324 2.77539 6.11657 2.86706 6.2999 3.05039C6.48324 3.23372 6.5749 3.46706 6.5749 3.75039C6.5749 4.03372 6.48324 4.26706 6.2999 4.45039L3.4499 7.30039C3.26657 7.48372 3.03324 7.57539 2.7499 7.57539C2.46657 7.57539 2.23324 7.48372 2.0499 7.30039ZM21.9499 7.30039C21.7666 7.48372 21.5332 7.57539 21.2499 7.57539C20.9666 7.57539 20.7332 7.48372 20.5499 7.30039L17.6999 4.45039C17.5166 4.26706 17.4249 4.03372 17.4249 3.75039C17.4249 3.46706 17.5166 3.23372 17.6999 3.05039C17.8832 2.86706 18.1166 2.77539 18.3999 2.77539C18.6832 2.77539 18.9166 2.86706 19.0999 3.05039L21.9499 5.90039C22.1332 6.08372 22.2249 6.31706 22.2249 6.60039C22.2249 6.88372 22.1332 7.11706 21.9499 7.30039ZM11.9999 20.0004C13.9499 20.0004 15.6041 19.3212 16.9624 17.9629C18.3207 16.6046 18.9999 14.9504 18.9999 13.0004C18.9999 11.0504 18.3207 9.39622 16.9624 8.03789C15.6041 6.67956 13.9499 6.00039 11.9999 6.00039C10.0499 6.00039 8.39574 6.67956 7.0374 8.03789C5.67907 9.39622 4.9999 11.0504 4.9999 13.0004C4.9999 14.9504 5.67907 16.6046 7.0374 17.9629C8.39574 19.3212 10.0499 20.0004 11.9999 20.0004Z"
            />
          </svg>
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r9:-Tab-Title-1"
      id=":r8:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="heading heading--headline-sm mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> WithTabIllustrations story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center tabs__list--variant-default"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="true"
          class="tabs__link"
          href="#:ra:"
          id=":rb:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="tabs__link"
          href="#:ra:"
          id=":rb:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="tabs__link"
          href="#:ra:"
          id=":rb:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":rb:-Tab-Title-1"
      id=":ra:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="heading heading--headline-sm mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
